# python-project-83

./: .gitignore  README.md  build.sh  database.sql  makefile  pyproject.toml
.github/workflows/: pyci.yml
page_analyzer/: __init__.py  app.py  checks.py  conn_database.py  normalizer.py  parser.py  validator.py
page_analyzer/templates/: base.html  error.html  main.html  url.html  urls.html
