[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "Page anylyzer"
authors = ["u-shev <sheveleva.jul@gmail.com>"]
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<4.0"
flask = "^2.0.1"
gunicorn = "^20.1.0"
flake8 = "^6.0.0"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.6"
validators = "^0.20.0"
beautifulsoup4 = "^4.12.2"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"